@startuml
package PostgreSQL {

  class usuario {
    integer id
    String nome
    String email
    String senha
    String moeda
    integer mes_fechamento
    datetime data_cadastro
  }

  class conta {
    integer id
    integer usuario_id
    String nome
    String tipo
    float saldo
    datetime data_criacao
  }

  class categoria {
    integer id
    integer usuario_id
    String nome
    String tipo
  }

  class movimentacao {
    integer id
    integer usuario_id
    integer conta_id
    integer categoria_id
    String descricao
    float valor
    String tipo
    String status
    date data_movimento
    datetime data_criacao
  }

}

usuario "1" -- "*" conta
usuario "1" -- "*" categoria
usuario "1" -- "*" movimentacao
conta "1" -- "*" movimentacao
categoria "1" -- "*" movimentacao
@enduml
